# Crucible

./: CMakeLists.txt
ancientarchives/creature_engine/core/changes/: ChangeHistory.h  ChangeProcessor.h  ChangeTypes.h  FormChange.h
ancientarchives/creature_engine/core/validation/: ChangeValidator.h  StateValidator.h
ancientarchives/creature_engine/internal/utilities/: NameGenerator.h  ValidationUtils.h
ancientarchives/creature_engine/io/: SerializationStructures.h
ancientarchives/creature_engine/traits/processors/: TraitManager.h  TraitProcessor.h
ancientarchives/creature_engine/traits/synthesis/: SynthesisState.h
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
data/schemas/: themes.schema.json
engines/creature/include/traits/: TraitDefinition.hpp
frontend/: CLAUDE.md  eslint.config.mjs  minimal-panda.config.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  panda.config.ts  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json
frontend (deprecated)/: package-lock.json  package.json
frontend (deprecated)/public/: index.html
frontend (deprecated)/src/hooks/: useForm.js
frontend(experimental)/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend(experimental)/public/: index.html
frontend(experimental)/src/app/: layout.tsx  page.tsx
frontend(experimental)/src/app/styles/: global.css
frontend(experimental)/src/components/navbars/: ElementCard.tsx  ItemNavivation.tsx  LeftDocSideBar.tsx  LeftSideBar.tsx  NavigationBar.tsx  ScrollableInformationCard.tsx
frontend(experimental)/src/hooks/: useQuey.ts
frontend(experimental)/src/providers/: AppProviders.tsx
frontend/moonlight-ui/animations/: interactionAnimations.ts
frontend/moonlight-ui/effects/: ripple.tsx
frontend/moonlight-ui/hooks/: useActivationHandler.ts  useInwardRippleEffect.ts  usePressAndHold.ts  useRippleEffect.ts
frontend/moonlight-ui/panda.config/: animations.ts  breakpoints.ts  global-css.ts  keyframes.ts  text-styles.ts  themes.ts
frontend/moonlight-ui/styles/: rippleStyle.ts
frontend/panda.config/: text-styles.ts
frontend/panda.config/recipes/: PopUp.ts  cosmicAccordion.ts  cosmicAvatar.ts  cosmicButton.ts  cosmicCard.ts  cosmicCollapsible.ts  cosmicContent.ts  cosmicDonerButton.ts  cosmicDropdown.ts  cosmicIconButton.ts  cosmicInformationCard.ts  cosmicInput.ts  cosmicInputs.ts  cosmicMenuButton.ts  cosmicModal.ts  cosmicNavItem.ts  cosmicNavigationBar.ts  cosmicRadioButton.ts  cosmicSideBar.ts  cosmicSubmenu.ts  cosmicSwitch.ts  cosmicTabs.ts  cosmicTooltip.ts  element.ts  index.ts  pand.config.ts.md
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/styles/: global.css
frontend/src/contexts/: SideBarContext.tsx
frontend/src/hooks/: usePersistedState.ts
frontend/src/lib/: registry.tsx  utils.ts
frontend/src/styles/: GlobalStyles.js  theme.js
frontend/src/utils/: mockData.ts
include/creature_engine/core/: CreatureCore.h  CreatureEnums.h
include/creature_engine/io/: DataLoader.h  SerializationImpl.h
include/creature_engine/systems/: CreatureTheme.h
include/crescent/: CreatureEnums.h  CreatureEnvironment.h  CreatureEvolution.h  CreatureExceptions.h  CreatureStructures.h  CreatureTheme.h  DynamicCreature.h
include/crescent/private/: DataLoader.h  ImplementationSpecific.h  InternalDetails.h  Serializer.h
src/: CreatureEnums.cpp  CreatureEnvironment.cpp  CreatureEvolution.cpp  CreatureExceptions.cpp  CreatureStructures.cpp  CreatureTheme.cpp  Dataloader.cpp  DynamicCreature.cpp  Serializer.cpp  main
(+264 files in other folders)
